objects/tffa__RESTConfiguration__mdt.object
<CustomObject>
    <description>Configure REST handlers for different http paths to paths</description>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Describe the purpose of the REST Handler</description>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether the REST path is enabled</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Path__c</fullName>
        <description>The relative path url for the REST</description>
        <label>Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RESTHandlerClass__c</fullName>
        <description>The name of the apex class which extends RESTHandler</description>
        <label>REST Handler Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ResourceUrl__c</fullName>
        <description>The resource url for the REST</description>
        <label>Resource Url</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>REST Configuration</label>
    <listViews>
        <fullName>tffa__REST_Configuration</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>tffa__ResourceUrl__c</columns>
        <columns>tffa__Path__c</columns>
        <columns>tffa__RESTHandlerClass__c</columns>
        <columns>tffa__Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>REST Configuration</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>REST Configurations</pluralLabel>
</CustomObject>